[Extensions] Fix a bug in the startup pages override bubble

We show the startup pages override bubble on the first start of chrome
after the user installs an extension overriding the startup pages.
However, if the user happened to restart chrome (e.g. through
chrome://restart), then the pages shown won't be the startup pages.
Check for this before showing the bubble, and add a regression test.

BUG=649001

Review-Url: https://codereview.chromium.org/2350733005
Cr-Commit-Position: refs/heads/master@{#420115}

Former-commit-id: d9a05aa24453233fa8cd375a5d9fff11de8a7c32