chrome/browser/extensions/extension_browsertest.cc
@@ -389,14 +389,9 @@ const Extension* ExtensionBrowserTest::UpdateExtensionWaitForIdle(
     const std::string& id,
     const base::FilePath& path,
     int expected_change) {
-  return InstallOrUpdateExtension(id,
-                                  path,
-                                  INSTALL_UI_TYPE_NONE,
-                                  expected_change,
-                                  Manifest::INTERNAL,
-                                  browser(),
-                                  Extension::NO_FLAGS,
-                                  false);
+  return InstallOrUpdateExtension(id, path, INSTALL_UI_TYPE_NONE,
+                                  expected_change, Manifest::INTERNAL,
+                                  browser(), Extension::NO_FLAGS, false, false);
 }
 
 const Extension* ExtensionBrowserTest::InstallExtensionFromWebstore(
@@ -404,7 +399,7 @@ const Extension* ExtensionBrowserTest::InstallExtensionFromWebstore(
     int expected_change) {
   return InstallOrUpdateExtension(
       std::string(), path, INSTALL_UI_TYPE_AUTO_CONFIRM, expected_change,
-      Manifest::INTERNAL, browser(), Extension::FROM_WEBSTORE, true);
+      Manifest::INTERNAL, browser(), Extension::FROM_WEBSTORE, true, false);
 }
 
 const Extension* ExtensionBrowserTest::InstallOrUpdateExtension(
@@ -412,14 +407,9 @@ const Extension* ExtensionBrowserTest::InstallOrUpdateExtension(
     const base::FilePath& path,
     InstallUIType ui_type,
     int expected_change) {
-  return InstallOrUpdateExtension(id,
-                                  path,
-                                  ui_type,
-                                  expected_change,
-                                  Manifest::INTERNAL,
-                                  browser(),
-                                  Extension::NO_FLAGS,
-                                  true);
+  return InstallOrUpdateExtension(id, path, ui_type, expected_change,
+                                  Manifest::INTERNAL, browser(),
+                                  Extension::NO_FLAGS, true, false);
 }
 
 const Extension* ExtensionBrowserTest::InstallOrUpdateExtension(
@@ -429,14 +419,9 @@ const Extension* ExtensionBrowserTest::InstallOrUpdateExtension(
     int expected_change,
     Browser* browser,
     Extension::InitFromValueFlags creation_flags) {
-  return InstallOrUpdateExtension(id,
-                                  path,
-                                  ui_type,
-                                  expected_change,
-                                  Manifest::INTERNAL,
-                                  browser,
-                                  creation_flags,
-                                  true);
+  return InstallOrUpdateExtension(id, path, ui_type, expected_change,
+                                  Manifest::INTERNAL, browser, creation_flags,
+                                  true, false);
 }
 
 const Extension* ExtensionBrowserTest::InstallOrUpdateExtension(
@@ -445,14 +430,9 @@ const Extension* ExtensionBrowserTest::InstallOrUpdateExtension(
     InstallUIType ui_type,
     int expected_change,
     Manifest::Location install_source) {
-  return InstallOrUpdateExtension(id,
-                                  path,
-                                  ui_type,
-                                  expected_change,
-                                  install_source,
-                                  browser(),
-                                  Extension::NO_FLAGS,
-                                  true);
+  return InstallOrUpdateExtension(id, path, ui_type, expected_change,
+                                  install_source, browser(),
+                                  Extension::NO_FLAGS, true, false);
 }
 
 const Extension* ExtensionBrowserTest::InstallOrUpdateExtension(
@@ -463,7 +443,8 @@ const Extension* ExtensionBrowserTest::InstallOrUpdateExtension(
     Manifest::Location install_source,
     Browser* browser,
     Extension::InitFromValueFlags creation_flags,
-    bool install_immediately) {
+    bool install_immediately,
+    bool grant_permissions) {
   ExtensionService* service =
       extensions::ExtensionSystem::Get(profile())->extension_service();
   ExtensionRegistry* registry = ExtensionRegistry::Get(profile());
@@ -503,6 +484,7 @@ const Extension* ExtensionBrowserTest::InstallOrUpdateExtension(
     installer->set_creation_flags(creation_flags);
     installer->set_install_source(install_source);
     installer->set_install_immediately(install_immediately);
+    installer->set_allow_silent_install(grant_permissions);
     if (!installer->is_gallery_install()) {
       installer->set_off_store_install_allow_reason(
           extensions::CrxInstaller::OffStoreInstallAllowedInTest);
